--- a/ECart/app/src/main/AndroidManifest.xml
+++ b/ECart/app/src/main/AndroidManifest.xml
@@ -4,22 +4,20 @@
     package="com.example.e_cart">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/flipkart_logo"
+        android:icon="@mipmap/images"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/flipkart_logo"
+        android:roundIcon="@mipmap/images"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MyAddressesActivity" >
-        </activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".OTPVerificationActivity"></activity>
+        <activity android:name=".MyAddressesActivity"></activity>
         <activity
             android:name=".AddAddressActivity"
             android:theme="@style/ForgetProgressBar" />
@@ -39,17 +37,19 @@
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".SplashActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
-        tools:replace="android:theme"
-        android:theme="@style/paytmTheme"
-        android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
+        <activity
+            android:name="com.paytm.pgsdk.PaytmPGActivity"
+            android:configChanges="keyboardHidden|orientation|keyboard"
+            android:screenOrientation="portrait"
+            android:theme="@style/paytmTheme"
+            tools:replace="android:theme" />
     </application>
 
 </manifest>
